<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ps101_ic_back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:textColor="@color/white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/general_auxiliary_operation"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:onClick="onSave"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/ps101_ic_save"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white_ffffff"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/tv_downlink_for_pos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ps101_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onDownlinkForPos"
            android:text="@string/downlink_for_position"
            android:textColor="@color/black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <View style="@style/lw006_divider_line" />

        <TextView
            android:id="@+id/tv_man_down_detection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ps101_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onManDownDetection"
            android:text="@string/man_down_detection"
            android:textColor="@color/black_333333"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View style="@style/lw006_divider_line" />

        <TextView
            android:id="@+id/tvAlarmFunction"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ps101_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onAlarmFunction"
            android:text="Alarm Function"
            android:textColor="@color/black_333333"
            android:textSize="15sp"
            android:textStyle="bold" />
        <View style="@style/lw006_divider_line" />

        <TextView
            android:id="@+id/tvAxisDataReport"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ps101_ic_arrow_right"
            android:gravity="center_vertical"
            android:text="3-Axis Data Report"
            android:textColor="@color/black_333333"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>