<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ps101_ic_back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:textColor="@color/white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/general_device_mode"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white_ffffff"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/tvDeviceMode1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="Device Mode"
            android:textColor="@color/black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_device_mode"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/shape_radius_blue_btn_bg"
            android:gravity="center"
            android:minWidth="70dp"
            android:onClick="selectDeviceMode"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="Timing Mode"
            android:textColor="@color/white_ffffff"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDeviceMode1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvDeviceMode1" />

        <View
            android:id="@+id/line1"
            style="@style/lw006_divider_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/tvDeviceMode1" />

        <TextView
            android:id="@+id/tv_standby_mode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ps101_ic_arrow_right"
            android:gravity="center_vertical"
            android:text="Standby Mode"
            android:textColor="@color/black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <View
            android:id="@+id/line4"
            style="@style/lw006_divider_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_standby_mode" />

        <TextView
            android:id="@+id/tv_timing_mode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ps101_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onTimingMode"
            android:text="@string/timing_mode"
            android:textColor="@color/black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/line4" />

        <View
            android:id="@+id/line2"
            style="@style/lw006_divider_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_timing_mode" />

        <TextView
            android:id="@+id/tv_periodic_mode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ps101_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onPeriodicMode"
            android:text="@string/periodic_mode"
            android:textColor="@color/black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <View
            android:id="@+id/line3"
            style="@style/lw006_divider_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_periodic_mode" />

        <TextView
            android:id="@+id/tv_motion_mode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ps101_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onMotionMode"
            android:text="@string/motion_mode"
            android:textColor="@color/black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/line3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>