<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lw006_grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/lw006_blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableLeft="@drawable/lw006_ic_back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:text=""
            android:textColor="@color/lw006_white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/general_auxiliary_operation"
            android:textColor="@color/lw006_white_ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="onSave"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/lw006_ic_save"
            android:visibility="gone" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/lw006_white_ffffff"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_downlink_for_pos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:drawableRight="@drawable/lw006_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onDownlinkForPos"
            android:text="@string/downlink_for_position"
            android:textColor="@color/lw006_black_333333"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line1"
            style="@style/lw006_divider_line"
            app:layout_constraintTop_toBottomOf="@id/tv_downlink_for_pos" />

        <TextView
            android:id="@+id/tv_man_down_detection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:drawableRight="@drawable/lw006_ic_arrow_right"
            android:gravity="center_vertical"
            android:onClick="onManDownDetection"
            android:text="@string/man_down_detection"
            android:textColor="@color/lw006_black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <View
            android:id="@+id/line3"
            style="@style/lw006_divider_line"
            app:layout_constraintTop_toBottomOf="@id/tv_man_down_detection" />

        <TextView
            android:id="@+id/tvAlarmFunction"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:drawableRight="@drawable/lw006_ic_arrow_right"
            android:gravity="center_vertical"
            android:text="Alarm Function"
            android:onClick="onAlarmFunction"
            android:textColor="@color/lw006_black_333333"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/line3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>